<resources>
    <string name="app_name">RosarioDiario</string>
    <string name="botonIniciar">Salir</string>
    <string name="botonSiguiente">Siguiente Misterio</string>
    <string name="inicio">Parte inicial</string>
    <string name="titulo">Santo Rosario</string>
    <string name="tituloAveMaria">Ave María</string>
    <string name="numAaveMaria">0</string>
    <string name="botonAveMaria">Ave María >></string>
    <string name="contador">Contador de Ave Marías</string>
    <string name="permisos">Necesitarás habilitar manualmente el permiso de notificaciones si quieres recibirlas en su móvil</string>
    <string name="rechazaPermisos">Rechazando este permisos no podrá recibir recordatorios del rezo del rosario</string>
    <string name="titulo_otras_apps">Otras Apps del Autor</string>
    <string-array name="misterios">
        <item>Parte inicial</item>
        <item>Primer Misterio</item>
        <item>Segundo Misterio</item>
        <item>Tercer Misterio</item>
        <item>Cuarto Misterio</item>
        <item>Quinto Misterio</item>
        <item>Letanías</item>
    </string-array>
    <string name="misteriosHoy">Los misterios de hoy son los</string>
    <string name="misterioGlorioso">gloriosos</string>
    <string name="misterioGozoso">gozosos</string>
    <string name="misterioDoloroso">dolorosos</string>
    <string name="misterioLuminoso">luminosos</string>
    <string name="tituloLetanias">Letanías de las Santísima Virgen.</string>
    <string-array name="letanias">
        <item>Señor, ten piedad</item>
        <item>Cristo, ten piedad</item>
        <item>Señor, ten piedad..</item>
        <item>Cristo, óyenos..</item>
        <item>Cristo, escúchanos..</item>
        <item>Dios Padre celestial..</item>
        <item>Dios Hijo, Redentor del mundo..</item>
        <item>Dios Espíritu Santo..</item>
        <item>Trinidad Santa, un solo Dios..</item>
        <item>Santa María,</item>
        <item>Santa Madre de Dios..</item>
        <item>Santa Virgen de las Vírgenes..</item>
        <item>Madre de Cristo..</item>
        <item>Madre de la divina gracia..</item>
        <item>Madre purísima..</item>
        <item>Madre castísima..</item>
        <item>Madre inviolada..</item>
        <item>Madre virgen..</item>
        <item>Madre inmaculada..</item>
        <item>Madre amable..</item>
        <item>Madre del buen consejo..</item>
        <item>Madre del Creador..</item>
        <item>Madre del Salvador..</item>
        <item>Madre de la Iglesia..</item>
        <item>Virgen prudentísima..</item>
        <item>Virgen digna de veneración..</item>
        <item>Virgen digna de alabanza..</item>
        <item>Virgen poderosa..</item>
        <item>Virgen clemente..</item>
        <item>Virgen fiel..</item>
        <item>Espejo de justicia..</item>
        <item>Ideal de Santidad..</item>
        <item>Trono de sabiduría..</item>
        <item>Causa de nuestra alegría..</item>
        <item>Templo del Espíritu Santo..</item>
        <item>Honor de la humanidad..</item>
        <item>Modelo de entrega a Dios..</item>
        <item>Rosa escogida..</item>
        <item>Fuerte como la torre de David..</item>
        <item>Hermosa como la torre de marfil..</item>
        <item>Casa de oro..</item>
        <item>Arca de la Nueva Alianza..</item>
        <item>Puerta del cielo..</item>
        <item>Estrella de la mañana..</item>
        <item>Salud de los enfermos..</item>
        <item>Refugio de los pecadores..</item>
        <item>Consoladora de los afligidos..</item>
        <item>Auxilio de los cristianos..</item>
        <item>Reina de los Ángeles..</item>
        <item>Reina de los Patriarcas..</item>
        <item>Reina de los Profetas..</item>
        <item>Reina de los Apóstoles..</item>
        <item>Reina de los Mártires.</item>
        <item>Reina de los Confesores de la fe..</item>
        <item>Reina de las Vírgenes..</item>
        <item>Reina de todos los Santos..</item>
        <item>Reina concebida sin pecado original..</item>
        <item>Reina asunta a los Cielos..</item>
        <item>Reina del Santísimo Rosario..</item>
        <item>Reina de la paz..</item>
        <item>Reina de las familias.. </item>
        <item>Cordero de Dios, que quitas el pecado del mundo…</item>
        <item>Cordero de Dios, que quitas el pecado del mundo…</item>
        <item>Cordero de Dios, que quitas el pecado del mundo…</item>
        <item>Bajo tu protección los acogemos, Santa Madre de Dios, no deseches las súplicas que dirigimos en nuestras necesidades, antes bien, líbranos siempre de todo peligro, oh Virgen gloriosa y bendita.</item>
        <item>Ruega por nosotros, Santa Madre de Dios.</item>
        <item>Para que seamos dignos de alcanzar las promesas de Nuestro Señor Jesucristo. Amén.</item>
    </string-array>
    <string-array name="respuestaLetanias">
        <item>R/ Señor, ten piedad</item>
        <item>R/ Cristo, ten piedad</item>
        <item>R/ Señor, ten piedad..</item>
        <item>R/ Cristo, óyenos..</item>
        <item>R/ Cristo, escúchanos..</item>
        <item>R/ Ten misericordia de nosotros</item>
        <item>R/ Ten misericordia de nosotros</item>
        <item>R/ Ten misericordia de nosotros</item>
        <item>R/ Ten misericordia de nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Ruega por nosotros</item>
        <item>R/ Perdónanos Señor</item>
        <item>R/ Escúchanos Señor</item>
        <item>R/ Ten misericordia de nosotros</item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
    <string name="jesusMio">María, Madre de gracia, Madre de misericordia, en la vida y en la muerte, ampáranos gran Señora. Amén.\n\n¡Oh Jesús mío!, perdona nuestros pecados, líbranos del fuego del infierno, lleva todas las almas al cielo y socorre especialmente a las más necesitadas de tu Divina Misericordia.</string>
    <string name="inicioRosario"> Por la señal de la Santa Cruz, de nuestros enemigos, líbranos Señor Dios Nuestro. \n\nSeñor mío Jesucristo, Dios y Hombre verdadero, Creador, Padre y Redentor mío, por ser Vos quien sois y porque os amo sobre todas las cosas, me pesa de todo corazón haberos ofendido; propongo firmemente nunca más pecar, apartarme de todas las ocasiones de ofenderos, confesarme y, cumplir la penitencia que me fuera impuesta. Ofrezco, Señor, mi vida, obras y trabajos, en satisfacción de todos mis pecados, y, así como lo suplico, así confío en vuestra bondad y misericordia infinita, que los perdonareis, por los méritos de vuestra preciosísima sangre, pasión y muerte, y me daréis gracia para enmendarme, y perseverar en vuestro santo amor y servicio, hasta el fin de mi vida.\n\n Amén. Señor, ábreme los labios y mi boca proclamará tu alabanza. Dios mio, ven en mi auxilio, Señor, date prisa en socorrerme. Gloria al Padre, y al Hijo y al Espíritu Santo.</string>
    <string name="oracionFinal">Oremos: Te rogamos Señor y Dios nuestro, nos concedas a tus siervos gozar de perpétua salud de alma y cuerpo, y, por la gloriosa intersección de la Bienaventurada siempre Virgen María ser librados de la tristeza presente y disfrutar de la eterna alegría del Cielo. Por Jesucristo nuestro Señor. Amén</string>
    <string name="intenciones">Por la persona e intenciones del Romano Pontífice y las necesidades de la Santa Iglesia. Te pedimos Señor, nos concedas a nosotros tus siervos, gozar de perpetua salud de alma y cuerpo, y por la gloriosa intercesión de la bienaventurada siempre Virgen María, seamos librados de las tristezas presentes y gocemos de la eterna alegría. Por Jesucristo, nuestro Señor. Amén.</string>
    <string name="gloria">Gloria</string>
    <string name="gloria1">Gloria al Padre al Hijo y al Espíritu Santo</string>
    <string name="gloria2">como era en un principio, ahora y siempre por los siglos de los siglos. Amén</string>
    <string name="tituloPadreNuestro">Padre nuestro</string>
    <string name="padreNuestro">Padre nuestro que estás en el cielo, santificado sea tu Nombre; venga a nosotros tu Reino; hágase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada día; perdona nuestras ofensas,como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación, y líbranos del mal. Amén.</string>
    <string name="padreNuestro1">Padre nuestro que estás en el cielo, santificado sea tu Nombre; venga a nosotros tu Reino; hágase tu voluntad en la tierra como en el cielo.</string>
    <string name="padreNuestro2">Danos hoy nuestro pan de cada día; perdona nuestras ofensas,como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación, y líbranos del mal. Amén.</string>
    <string name="aveMaria">Dios te salve María, llena eres de gracia, el Señor es contigo, bendita tú eres entre todas las mujeres y bendito es el fruto de tu vientre Jesús. Santa María, Madre de Dios, ruega por nosotros pecadores, ahora y en la hora de nuestra muerte Amén.</string>
    <string name="aveMaria1">Dios te salve María, llena eres de gracia, el Señor es contigo, bendita tú eres entre todas las mujeres y bendito es el fruto de tu vientre Jesús.</string>
    <string name="smeditados">Misterios Meditados</string>
    <string name="smeditadosDetalle">Cada misterio mostrará la meditación de los mismos</string>
    <string name="sNotificaciones">Notificaciones diarias</string>
    <string name="sNotificacionesDetalle">Recibe una notificación diaria recordando rezo del rosario</string>
    <string name="sVelocidad">Velocidad de lectura</string>
    <string name="sOtras">Otras apps</string>
    <string name="sOtrasDetalle">Otras aplicaciones del mismo desarrollador</string>
    <string name="sVersion">Versión</string>
</resources>